Fixed double scroll bare issue

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -63,6 +63,7 @@ video {
     display: inline-block;
     width: calc(100% - 200px);
     height: 100%;
+    overflow: visible;
 }
 
 /* header */
